Alteração do nome do componente da equipe

--- a/Projeto 3/ Análise de dados do dataset 'Solar Flare' .ipynb
+++ b/Projeto 3/ Análise de dados do dataset 'Solar Flare' .ipynb
@@ -13,7 +13,7 @@
     " \n",
     "- Iuri Augusto Mendes Silva\n",
     "- Laércio Fernando Dole Dias\n",
-    "- Gabriel André Barreto Olimpio dos Santos\n",
+    "- Gabriel Câmara Cavalcanti\n",
     "- Lucas Matheus dos Passos Gomes\n",
     "- Nicolas Nassar Sousa Frazao\n",
     "\n",
